Flesh out the detailed "performance" page with graphs etc

--- a/website/css/awpy.css
+++ b/website/css/awpy.css
@@ -10,3 +10,12 @@
   text-align: center;
 }
 
+.awpy-row-graph {
+  padding: 1.2em;
+  border-bottom: 1px dotted grey;
+}
+
+.awpy-row-footer {
+  padding: 1.2em;
+  text-align: center;
+}
