Update version of metricsgraphics.js

--- a/website/css/metricsgraphics.css
+++ b/website/css/metricsgraphics.css
@@ -26,7 +26,7 @@
 }
 
 .mg-barplot rect.mg-bar {
-    shape-rendering: crispEdges;
+    shape-rendering: auto;
     fill: #b6b6fc;
 }
 
@@ -45,9 +45,9 @@
 
 .mg-baselines line {
     opacity: 1;
-    shape-rendering: crispEdges;
-    stroke: #909090;
-    stroke-width: 0.5;
+    shape-rendering: auto;
+    stroke: #b3b2b2;
+    stroke-width: 1px;
 }
 
 .mg-baselines text {
@@ -143,13 +143,13 @@
 .mg-histogram .axis line {
     fill: none;
     opacity: 0.7;
-    shape-rendering: crispEdges;
+    shape-rendering: auto;
     stroke: #ccc;
 }
 
 .mg-histogram .mg-bar rect {
     fill: #b6b6fc;
-    shape-rendering: crispEdges;
+    shape-rendering: auto;
 }
 
 .mg-histogram .mg-bar rect.active {
@@ -158,7 +158,7 @@
 
 .mg-least-squares-line {
     stroke: red;
-    stroke-width: 1;
+    stroke-width: 1px;
 }
 
 .mg-lowess-line {
@@ -232,10 +232,10 @@
 }
 
 .mg-markers line {
-    opacity: 1;
-    shape-rendering: crispEdges;
-    stroke: #909090;
-    stroke-width: 0.5;
+    opacity: 0.9;
+    shape-rendering: auto;
+    stroke: #b3b2b2;
+    stroke-width: 1px;
 }
 
 .mg-markers text {
@@ -250,11 +250,11 @@
 }
 
 .mg-missing-background {
-    stroke-width:2;
-    stroke-opacity:0.05;
-    stroke-dasharray:10,5;
-    fill:none;
-    stroke:blue;
+    stroke: blue;
+    fill: none;
+    stroke-dasharray: 10,5;
+    stroke-opacity: 0.05;
+    stroke-width: 2;
 }
 
 .mg-missing .mg-main-line {
@@ -313,9 +313,9 @@ circle.mg-points-mono {
 .mg-x-axis line,
 .mg-y-axis line {
     opacity: 1;
-    shape-rendering: crispEdges;
-    stroke: #909090;
-    stroke-width: 0.5;
+    shape-rendering: auto;
+    stroke: #b3b2b2;
+    stroke-width: 1px;
 }
 
 .mg-x-axis text,
@@ -353,9 +353,9 @@ circle.mg-points-mono {
 
 .mg-year-marker line {
     opacity: 1;
-    shape-rendering: crispEdges;
-    stroke: #909090;
-    stroke-width: 0.5;
+    shape-rendering: auto;
+    stroke: #b3b2b2;
+    stroke-width: 1px;
 }
 
 .mg-year-marker-small text {
